--- a/style.css
+++ b/style.css
@@ -115,13 +115,14 @@
         grid-template-columns: auto;
         margin: 0;;
         width: 100%;
-       /* position: absolute;
-        top: -1000px; */
+        position: absolute;
+        top: -1000px;
         opacity: 0;
         transition: all 0.5s ease;
         height: 50vh;
         z-index: -1;
-        background: #131313;
+        background: #131313
+    ;
     }
     .navbar_menu.active{
         background: #131313;
@@ -166,6 +167,26 @@
     .button{
         display: flex;
         justify-content: center;
+        align-items: center;
+        width: 80px;
+        height: 80px;
+        margin: 0;
+    }
+
+    .navbar__toggle .bar{
+        display: block;
+        cursor: pointer;
+
+    }
+
+    #mobile-menu.is-active .bar:nth-child(2){
+        opacity: 0;
+    }
+    #mobile-menu.is-active .bar:nth-child(1){
+        transform: translateY(8px) rotate(45deg);
+    }
+    #mobile-menu.is-active.bar:nth-child(3){
+        transform: translateY(-8px) rotate(-45deg);
     }
 }
 
